Fix broken style and track generated CSS to ease gh-pages branch handling.

--- a/default.scss
+++ b/default.scss
@@ -58,13 +58,26 @@
     
     margin: 0 30px 0 0;
     padding: 20px 5px 20px 5px;
+  }
+  
+  code {
+    font-family: 'Courier New', Courier, monospace;
     font-size: 24px;
     font-weight: bold;
     line-height: 1.3;
-  }
-  
-  &.topalign {
-    height: 700px;
+    
+    .sh_string {
+      font-family: 'Courier New', Courier, monospace;
+      color: #806E42;
+    }
+    
+    .sh_number {
+      color: #000;
+    }
+    
+    .result {
+      color: #000;
+    }
   }
 }
 
@@ -85,4 +98,8 @@
 
 .good {
   color: #66FF66;
+}
+
+div.content.topalign {
+  height: 700px;
 }
